<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MapIntentTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="test1">test1</string>
    <string name="test2">test2</string>
    <string name="test3">test3</string>
    <string name="test4">test4</string>
    <string name="test5">test5</string>
    <string name="test6">test6</string>
    <string name="test7">test7</string>
    <string name="test8">test8</string>
    <string name="start_receiver">Start Receiver</string>
    <string name="stop_receiver">Stop Receiver</string>
    
</resources>
